syntax = "proto3";

package grpcserver;

option go_package = "github.com/leonf08/metrics-yp/internal/grpc/proto";

message Metric {
  string id = 1;
  string type = 2;
  double value = 3;
}

message UpdateMetricRequest {
  Metric metric = 1;
}

message UpdateMetricResponse {
  Metric metric = 1;
}

message GetMetricRequest {
  string id = 1;
}

message GetMetricResponse {
  Metric metric = 1;
}

service Metrics {
  rpc UpdateMetric(UpdateMetricRequest) returns (UpdateMetricResponse);
  rpc GetMetric(GetMetricRequest) returns (GetMetricResponse);
}